# aqua-voice-hook

./: .gitignore  AppIcon.icns  AppIcon.png.prompt.md  Package.swift  README.md  appcast.xml
LaunchAgent/: com.aqua-voice-hook.plist
Scripts/: install.sh  release.sh  uninstall.sh
Sources/AquaVoiceHook/: AppDelegate.swift  Config.swift  GazeOverlayWindow.swift  GazeTriggerManager.swift  GroupBox.swift  HookRunner.swift  Info.plist  PasteboardMonitor.swift  RunningAppPicker.swift  SettingsWindowController.swift
docs/: competitive-research.md  oak-d-lite-gaze-detection.md
hooks/: example-log.sh
prototypes/: aqua-voice-hook.swift  detect-aqua-paste.sh  detect-aqua-paste.swift
prototypes/gaze-trigger/: README.md  main.py  pyproject.toml
